@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T16:15:06Z",
+  "timestamp" : "2022-05-09T00:58:43Z",
   "count_outdated" : 263,
   "uniques_outdated" : 129,
-  "count" : 282,
-  "uniques" : 145,
+  "count" : 290,
+  "uniques" : 150,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
+      "count": 9,
+      "count_minmax": [ 0, 9 ],
+      "uniques": 6,
+      "uniques_minmax": [ 0, 6 ]
     }
   ]
 }
