@@ -1,6 +1,6 @@
 {
-  "count": 19,
-  "uniques": 11,
+  "count": 27,
+  "uniques": 14,
   "clones": [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 9,
+      "uniques": 6
     }
   ]
 }
