@@ -1,3 +1,9 @@
+2022-05-09T00:58:43Z:
+* notice: last 14d: all unq: 27 14
+* notice: prev accum: outdated-all outdated-unq / all unq: 263 129 / 282 145
+* notice: next accum: outdated-all outdated-unq / all unq: 263 129 / 290 150
+* notice: prev json diff // prev day diff: unq all: +5 +8 / -0 -0 // +5 +8 / -0 -0
+
 2022-05-08T16:15:06Z:
 * notice: last 14d: all unq: 19 11
 * notice: prev accum: outdated-all outdated-unq / all unq: 263 129 / 281 144
